@@ -19,28 +19,24 @@ trait FuturePool {
  */
 object FuturePool {
   /**
-   * Creates a FuturePool backed by an ExecutorService.
-   *
-   * Note: for consumers from Java, there is not a java friendly api
-   * for using FuturePool.apply.  However, you can directly construct
-   * an ExecutorServiceFuturePool without problems.
+   * Creates a [[FuturePool]] backed by an `java.util.concurrent.ExecutorService`.
    */
-  def apply(executor: ExecutorService) =
+  def apply(executor: ExecutorService): ExecutorServiceFuturePool =
     new ExecutorServiceFuturePool(executor)
 
   /**
-   * Creates a FuturePool backed by an ExecutorService which propagates
-   * cancellation.
+   * Creates a [[FuturePool]] backed by an `java.util.concurrent.ExecutorService`
+   * which propagates cancellation.
    */
-  def interruptible(executor: ExecutorService) =
+  def interruptible(executor: ExecutorService): ExecutorServiceFuturePool =
     new InterruptibleExecutorServiceFuturePool(executor)
 
   /**
-   * A FuturePool that really isn't; it executes tasks immediately
+   * A [[FuturePool]] that really isn't; it executes tasks immediately
    * without waiting.  This can be useful in unit tests.
    */
-  val immediatePool = new FuturePool {
-    def apply[T](f: => T) = Future(f)
+  val immediatePool: FuturePool = new FuturePool {
+    def apply[T](f: => T): Future[T] = Future(f)
   }
 
   private lazy val defaultExecutor = Executors.newCachedThreadPool(
@@ -51,20 +47,12 @@ object FuturePool {
    * The default future pool, using a cached threadpool, provided by
    * [[java.util.concurrent.Executors.newCachedThreadPool]]. Note
    * that this is intended for IO concurrency; computational
-   * parallelism typically requires special treatment.
-   */
-  @deprecated("use unboundedPool instead", "5.3.11")
-  lazy val defaultPool = unboundedPool
-
-  /**
-   * The default future pool, using a cached threadpool, provided by
-   * [[java.util.concurrent.Executors.newCachedThreadPool]]. Note
-   * that this is intended for IO concurrency; computational
    * parallelism typically requires special treatment. If an interrupt
    * is raised on a returned Future and the work has started, the worker
    * thread will not be interrupted.
    */
-  lazy val unboundedPool = new ExecutorServiceFuturePool(defaultExecutor)
+  lazy val unboundedPool: FuturePool =
+    new ExecutorServiceFuturePool(defaultExecutor)
 
   /**
    * The default future pool, using a cached threadpool, provided by
@@ -74,25 +62,29 @@ object FuturePool {
    * is raised on a returned Future and the work has started, an attempt
    * will will be made to interrupt the worker thread.
    */
-  lazy val interruptibleUnboundedPool = new InterruptibleExecutorServiceFuturePool(defaultExecutor)
+  lazy val interruptibleUnboundedPool: FuturePool =
+    new InterruptibleExecutorServiceFuturePool(defaultExecutor)
 }
 
+/**
+ * A [[FuturePool]] backed by a `java.util.concurrent.ExecutorService`
+ * that supports cancellation.
+ */
 class InterruptibleExecutorServiceFuturePool(
-  executor: ExecutorService
-) extends ExecutorServiceFuturePool(executor, true)
+    executor: ExecutorService)
+  extends ExecutorServiceFuturePool(executor, true)
 
 /**
- * A FuturePool implementation backed by an ExecutorService.
+ * A [[FuturePool]] implementation backed by an `java.util.concurrent.ExecutorService`.
  *
  * If a piece of work has started, it cannot be cancelled and will not propagate
- * cancellation unless interruptible is true.
- *
- * If you want to propagate cancellation, use
+ * cancellation unless `interruptible` is true. If you want to propagate cancellation,
+ * use an [[InterruptibleExecutorServiceFuturePool]].
  */
 class ExecutorServiceFuturePool protected[this](
-  val executor: ExecutorService,
-  val interruptible: Boolean
-) extends FuturePool
+   val executor: ExecutorService,
+   val interruptible: Boolean)
+  extends FuturePool
 {
   def this(executor: ExecutorService) = this(executor, false)
 
@@ -100,9 +92,9 @@ class ExecutorServiceFuturePool protected[this](
     val runOk = new AtomicBoolean(true)
     val p = new Promise[T]
     val task = new Runnable {
-      val saved = Local.save()
+      private[this] val saved = Local.save()
 
-      def run() {
+      def run(): Unit = {
         // Make an effort to skip work in the case the promise
         // has been cancelled or already defined.
         if (!runOk.compareAndSet(true, false))
